--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-specifier-resolution=node index.js",
-    "dev": "nodemon --experimental-specifier-resolution=node index.js"
+    "dev": "nodemon --experimental-specifier-resolution=node index.js",
+    "swagger": "node --experimental-specifier-resolution=node src/common/configs/swagger-setup.js"
   },
   "keywords": [
     "codefarm"
@@ -18,10 +19,15 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "autogen": "^0.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.15.1",
+    "swagger": "^0.7.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.61"
   }
 }
