--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-specifier-resolution=node index.js",
-   "dev": "concurrently \"npm run swagger\" \"nodemon --experimental-specifier-resolution=node index.js\"",
+    "dev": "concurrently \"npm run swagger\" \"nodemon --experimental-specifier-resolution=node index.js\"",
     "swagger": "node --experimental-specifier-resolution=node src/common/configs/swagger-setup.js"
   },
   "keywords": [
@@ -20,11 +20,13 @@
   },
   "dependencies": {
     "autogen": "^0.0.1",
+    "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "swagger": "^0.7.5",
     "swagger-autogen": "^2.23.7",
