--done cart order payOS

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@payos/node": "^1.0.10",
     "autogen": "^0.0.1",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
